--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,47 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Block 1\n",
-    "import pyodbc\n",
     "import pandas as pd\n",
-    "from pandas.io import sql as psql\n",
-    "import numpy as np\n",
-    "\n",
-    "qry =\"select TO_CHAR(PRODUCTRECID) from IHPRODUCTCARACTERISTIC PDCT_CAR where PDCT_CAR.CARACTERISTICNAME = 'NUMERO_OFFRE_SPECIALE';\"\n",
-    "\n",
-    "\n",
-    "cnxstr = 'DSN=IHP1;UID=paesdan;PWD=paeshp1'\n",
-    "#Open a connection to the mentioned database\n",
-    "cnxn = pyodbc.connect(cnxstr)\n",
-    "#Open a cursor to input the data\n",
-    "cursor = cnxn.cursor()\n",
-    "\n",
-    "#Generate dataframe based on the connection and query \n",
-    "df_db = psql.read_sql(qry, cnxn)\n",
-    "#close connection to database\n",
-    "cnxn.close()\n",
-    "df_tst = df_db.fillna(0)\n",
-    "\n",
-    "#Block 5\n",
-    "#Open a connection to the mentioned database\n",
-    "cnxn = pyodbc.connect(cnxstr)\n",
-    "#Open a cursor to input the data\n",
-    "df_db = psql.read_sql(qry, cnxn)\n",
-    "#close connection to database\n",
-    "cnxn.close()\n",
-    "df_db = df_db.fillna(0)"
+    "import json\n",
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Instagram connector\n",
+    "client_id = '993ba18defc0465f8012d181caef7816'\n",
+    "client_secret = 'd7f475c0ac2041c1804f89d032b0639d'\n",
+    "red_url='http://localhost:8888'\n",
+    "payloadToken={'client_id': client_id, \\\n",
+    "             'client_secret': client_secret, \\\n",
+    "             'redirect_uri' : red_url, \\\n",
+    "             'response_type': 'token'}\n",
+    "resp_Token  = requests.get('https://api.instagram.com/oauth/authorize/', params=payloadToken)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#query by endpoint\n",
+    "\n",
+    "token = '31642816.993ba18.5f09830ef56c41f4b616db4bfb06f8d4'\n",
+    "hashtag = 'husky'\n",
+    "\n",
+    "payloadSearch={'access_token':token, \\\n",
+    "              'q':hashtag}\n",
+    "\n",
+    "resp_hashtag = requests.get('https://api.instagram.com/v1/tags/search', params=payloadSearch)\n",
+    "\n",
+    "json_data = json.loads(resp_hashtag.text)\n",
+    "\n",
+    "name,media_count = [],[]\n",
+    "\n",
+    "for result in json_data['data']:\n",
+    "    name.append(result['name'])\n",
+    "    media_count.append(result['media_count'])\n",
+    "df = pd.DataFrame({'tag_name':name, 'used_amount':media_count}) #T is for transpose\n",
+    "df.sort_values(['used_amount'], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -63,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
