--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -44,10 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_key = 'sZg2zgWWjyNO3eeiP3tL4Muze'\n",
-    "consumer_secret = 'sLsX3RFYrTX0rKNfH2EwnYS31qmJp7arQ3KIkc8Gsj85h4kfKE'\n",
-    "access_token = '63437096-Nk9X1R21cQqmBS4pnEGQuyxiOL8jM7I7Yo5on0SlQ'\n",
-    "access_token_secret = 'mWSO4P6pH8YNvijMqymMnzmwVsI1MoIHtoXssK1EzrpfX'\n",
+    "consumer_key = None\n",
+    "consumer_secret = None\n",
     "\n",
     "auth = tweepy.OAuthHandler(consumer_key=consumer_key, consumer_secret=consumer_secret)\n",
     "api = tweepy.API(auth)"
