--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -18,8 +18,8 @@
    "outputs": [],
    "source": [
     "#Instagram connector\n",
-    "client_id = '993ba18defc0465f8012d181caef7816'\n",
-    "client_secret = 'd7f475c0ac2041c1804f89d032b0639d'\n",
+    "client_id = None\n",
+    "client_secret = None\n",
     "red_url='http://localhost:8888'\n",
     "payloadToken={'client_id': client_id, \\\n",
     "             'client_secret': client_secret, \\\n",
@@ -36,7 +36,7 @@
    "source": [
     "#query by endpoint\n",
     "\n",
-    "token = '31642816.993ba18.5f09830ef56c41f4b616db4bfb06f8d4'\n",
+    "token = None\n",
     "hashtag = 'husky'\n",
     "\n",
     "payloadSearch={'access_token':token, \\\n",
