--- a/instagramScrapper.ipynb
+++ b/instagramScrapper.ipynb
@@ -38,6 +38,8 @@
     "\n",
     "token = None\n",
     "hashtag = 'husky'\n",
+    "fileName = 'path+filename'\n",
+    "delimiter = '|'\n",
     "\n",
     "payloadSearch={'access_token':token, \\\n",
     "              'q':hashtag}\n",
@@ -53,6 +55,9 @@
     "    media_count.append(result['media_count'])\n",
     "df = pd.DataFrame({'tag_name':name, 'used_amount':media_count}) #T is for transpose\n",
     "df.sort_values(['used_amount'], ascending=False)"
+    "\n",
+    "#flatfile generation\n",
+    "df.to_csv(fileName, sep=delimiter, header=True, index = False)\n"
    ]
   },
   {
