--- a/instagramScrapper.ipynb
+++ b/instagramScrapper.ipynb
@@ -57,7 +57,7 @@
     "df.sort_values(['used_amount'], ascending=False)"
     "\n",
     "#flatfile generation\n",
-    "df.to_csv(fileName, sep=delimiter, header=True, index = False)\n"
+    "df.to_csv(fileName, sep=delimiter, header=True, index = False)"
    ]
   },
   {
