--- a/InstagramScrapper.ipynb
+++ b/InstagramScrapper.ipynb
@@ -10,7 +10,7 @@
     "import json\n",
     "import requests\n",
     "\n",
-    "token = '31642816.993ba18.5f09830ef56c41f4b616db4bfb06f8d4'\n",
+    "token = 'tokenString'\n",
     "hashtag = 'husky'\n",
     "fileName='twitter_sentiment.csv'\n",
     "delimiter='|'\n",
