--- a/InstagramScrapper.ipynb
+++ b/InstagramScrapper.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "token = 'tokenString'\n",
     "hashtag = 'husky'\n",
-    "fileName='twitter_sentiment.csv'\n",
+    "fileName='path+fileName+extension'\n",
     "delimiter='|'\n",
     "\n",
     "payloadSearch={'access_token':token, \\\n",
